# linux-ipcs

./: README.md
dbus-glib/: Makefile  receive_signal.c  send_signal.c
dbus-glib-xml-ser-cli/wei/: CMakeLists.txt
dbus-glib-xml-ser-cli/wei/client/: client.c
dbus-glib-xml-ser-cli/wei/client/interface/: wei.xml
dbus-glib-xml-ser-cli/wei/server/: server.c
dbus-glib-xml-ser-cli/wei/server/interface/: wei.xml
dbus-glib-xml-ser-cli/wei/server/object/: com_wei_myobject.c  com_wei_myobject.h
